--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./static/layui/mobile/need/layer.css">
     <script type='text/javascript' src='static/jquery-1.12.4.js/'></script>
     <script type='text/javascript' src="./static/layui/layer.js"></script>
-    <title>demo</title>
+    <title>xy_shine</title>
   </head>
   <body>
     <div id="app"></div>
